k8s/python-worker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-worker
  labels:
    app: python-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-worker
  template:
    metadata:
      labels:
        app: python-worker
    spec:
      containers:
        - name: python-worker
          image: waylake/datastream-python-worker:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
