k8s/python-worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-worker
spec:
  selector:
    app: python-worker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
