k8s/python-worker/shared-network.yaml
apiVersion: v1
kind: NetworkPolicy
metadata:
  name: shared-network
  namespace: default
spec:
  podSelector:
    matchLabels:
  ingress:
    - from:
        - podSelector:
            matchLabels:
